k8s/spark/spark-history/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: spark-history-server
  namespace: spark
spec:
  selector:
    app: spark-history-server
  ports:
  - name: http
    port: 18080
    targetPort: 18080
  type: ClusterIP
