k8s/spark/spark-history/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-history-server
  namespace: spark
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - http:
        paths:
          - path: /spark
            pathType: Prefix
            backend:
              service:
                name: spark-history-server
                port:
                  number: 18080
